--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,140 @@ body {
   display: none;
 }
 
+/* shopping-cart */
+
+
+#shopping-cart-button{
+  position: relative;
+}
+
+#shopping-cart-button .quantity-badge {
+  display: inline-block;
+  padding: 1px 5px;
+  background-color: red;
+  border-radius: 5px;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 0;
+  right: -10px;
+}
+
+
+.shopping-cart {
+  position: absolute;
+  top: 0;
+  right: -100%;
+  height: 100vh;
+  width: 35rem;
+  padding: 0 1.5rem;
+  background-color: #fff;
+  color: var(--bg);
+  transition: 0.5s;
+}
+
+.shopping-cart h4{
+  font-size: 1.6rem;
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.shopping-cart.active {
+  right: 0;
+}
+.shopping-cart .cart-item {
+  margin: 1rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px dashed #666;
+  position: relative;
+}
+
+.shopping-cart img{
+  border-radius: 50rem;
+  height: 4rem;
+}
+.shopping-cart h3{
+  font-size: 1.4rem;
+}
+
+.shopping-cart .item-price {
+  font-size: 1.2rem;
+}
+
+
+
+.shopping-cart .cart-item #add,
+.shopping-cart .cart-item #remove{
+  display: inline-block;
+  pad: 2px 5px;
+  cursor: pointer;
+  margin: 0.8px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+/* form checkout */
+.form-container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-top: 1rem;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.form-container h5{
+  text-align: center;
+  font-size: 2rem;
+}
+
+.form-container form{
+  width: 100%;
+  text-align: center;
+
+}
+
+.form-container label{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1.3rem;
+
+}
+
+.form-container span{
+  text-align: right;
+  font-size: larger;
+  padding-right: 1rem;
+}
+
+.form-container input{
+  background-color: #ddd;
+  padding: 5px;
+  font-size: 1rem;
+  width: 70%;
+}
+
+.form-container .checkout-button{
+  background-color: royalblue;
+  color: white;
+  padding: 6px 14px;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 20px;
+  margin: 1rem auto;
+  cursor: pointer;
+}
+
+.form-container .checkout-button.disabled{
+  background-color: #999;
+  cursor: not-allowed;
+}
+
 /* Hero */
 .hero {
   min-height: 100vh;
@@ -90,9 +224,11 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0));
 }
 
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -104,11 +240,15 @@ body {
     rgba(1, 1, 3, 1) 8%,
     rgba(255, 255, 255, 0) 50%
   );
-}
+} */
 
 .hero .content {
   padding: 1.4rem 7%;
-  max-width: 50rem;
+  /* max-width: 50rem; */
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 150px;
 }
 
 .hero .content h1 {
@@ -143,13 +283,15 @@ body {
 
 .about,
 .produk,
-.contact {
+.contact,
+.unggulan {
   padding: 6rem 7% 1.4rem;
 }
 
 .about h2,
 .produk h2,
-.contact h2 {
+.contact h2,
+.unggulan h2 {
   text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
@@ -157,7 +299,8 @@ body {
 
 .about h2 span,
 .produk h2 span,
-.contact h2 span {
+.contact h2 span,
+.unggulan h2 span {
   color: var(--primary);
 }
 
@@ -225,6 +368,73 @@ body {
 
 .produk .row .produk-card .produk-card-title {
   margin: 1rem auto 0.5rem;
+}
+
+/* unggulan */
+.unggulan .row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+  margin-top: 4rem;
+
+}
+
+.unggulan .unggulan-card{
+  text-align: center;
+  border: 1px solid #666;
+  padding: 2rem;
+
+}
+
+.unggulan .unggulan-icons{
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.unggulan .unggulan-icons a{
+  width: 4rem;
+  height: 4rem;
+  color: #fff;
+  margin: 0.3rem;
+  border: 1px solid #666;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  align-items: center;
+}
+
+.unggulan .unggulan-icons a:hover{
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+}
+
+.unggulan .unggulan-image {
+  padding: 1rem 0;
+}
+
+.unggulan .unggulan-image img {
+  height: 25rem;
+}
+
+.unggulan .unggulan-content h3{
+  font-size: 2rem;
+}
+
+.unggulan .unggulan-stars {
+  font-size: 1.7rem;
+  padding: 0.8rem;
+  color: gold;
+}
+
+.unggulan .unggulan-stars .star-full{
+  color: var(--primary);
+  fill: var(--primary);
+}
+
+.unggulan .unggulan-price {
+  font-size: 1.3rem;
+  font-weight: bold;
 }
 
 /*contact*/
@@ -358,7 +568,7 @@ html {
   }
 
   .navbar .navbar-nav a:hover::after {
-    transform: scaleX(0.2);
+    transform: scaleX(0.8);
   }
 
   .about .row {
